--- a/pg/Dockerfile
+++ b/pg/Dockerfile
@@ -1,21 +1,23 @@
-FROM phusion/baseimage:latest
+FROM debian:stable
 
 MAINTAINER @voxxit
 
-ENV HOME /root
 ENV PGDATA /var/lib/postgresql/9.3/main
 
 EXPOSE 5432
 
-ADD start /start
-
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends postgresql-9.3 postgresql-client-9.3 postgresql-contrib-9.3 pwgen && \
-    apt-get autoremove && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/lib/postgresql/* && \
-    chmod +x /start
+  DEBIAN_FRONTEND=noninteractive apt-get install -y lsb-release curl && \
+  echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | tee /etc/apt/sources.list.d/pgdg.list && \
+  curl -sSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
+  apt-get update && \
+  DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends postgresql-9.3 postgresql-client-9.3 postgresql-contrib-9.3 pwgen && \
+  apt-get clean && \
+  apt-get autoremove -y && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/lib/postgresql/*
 
 VOLUME ["/var/lib/postgresql"]
 
-CMD ["/start"]
+ADD start /start
+
+CMD ["/bin/bash", "/start"]
