Updating own cloud

--- a/owncloud/Dockerfile
+++ b/owncloud/Dockerfile
@@ -1,23 +1,32 @@
-FROM ubuntu:12.04
+FROM ubuntu:14.04
 
-MAINTAINER Joshua Delsman <j@srv.im>
+RUN echo "deb http://ppa.launchpad.net/nginx/stable/ubuntu trusty main" | \
+    tee /etc/apt/sources.list.d/nginx.list \
+  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C300EE8C \
+  && apt-get update \
+  && apt-get install -y \
+    nginx \
+    php5-fpm \
+    php5-gd \
+    php5-json \
+    php5-mysql \
+    php5-curl \
+    php5-intl \
+    php5-mcrypt \
+    php5-imagick \
+  && apt-get autoclean \
+  && rm -rf /var/lib/apt/lists/* \
+  && echo "daemon off;" | tee -a /etc/nginx/nginx.conf \
+  && sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/' /etc/php5/fpm/php.ini
 
-ENV APP_DATA /var/www/owncloud/data
+ADD ./nginx.conf /etc/nginx/sites-available/default
+ADD ./owncloud-7.0.2.tar.bz2 /
 
-ADD http://download.opensuse.org/repositories/isv:ownCloud:community/xUbuntu_12.04/Release.key /Release.key
+RUN rm -rf /usr/share/nginx/html \
+  && mv /owncloud /usr/share/nginx/html \
+  && chown -R www-data: /usr/share/nginx/html
 
-COPY ./nginx.conf /etc/nginx/sites-available/owncloud
-COPY ./start.sh start.sh
-
-RUN echo 'deb http://download.opensuse.org/repositories/isv:/ownCloud:/community/xUbuntu_12.04/ /' | tee /etc/apt/sources.list.d/owncloud.list && \
-  apt-key add - < Release.key && \
-  apt-get -y update && \
-  DEBIAN_FRONTEND=noninteractive apt-get install -y nginx owncloud php5-common php5-cli php5-fpm && \
-  ln -s /etc/nginx/sites-available/owncloud /etc/nginx/sites-enabled/ && \
-  echo "daemon off;" | tee -a /etc/nginx/nginx.conf && \
-  sed -i -e "s/listen\ \=\ 127.0.0.1:9000/listen\ =\ \/var\/run\/php5-fpm.sock/g" /etc/php5/fpm/pool.d/www.conf
-
-VOLUME [ "/var/www/owncloud/data" ]
+COPY start.sh /start.sh
 
 EXPOSE 80
 
