--- a/owncloud/nginx.conf
+++ b/owncloud/nginx.conf
@@ -2,13 +2,8 @@ server {
 
   listen 80;
 
-  server_name _;
-
   # Path to the root of your installation
-  root /var/www/owncloud;
-
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log;
+  root /usr/share/nginx/html;
 
   client_max_body_size 10G; # set max upload size
   fastcgi_buffers 64 4K;
@@ -18,7 +13,6 @@ server {
   rewrite ^/webdav(.*)$ /remote.php/webdav$1 redirect;
 
   index index.php;
-
   error_page 403 /core/templates/403.php;
   error_page 404 /core/templates/404.php;
 
@@ -49,13 +43,9 @@ server {
     try_files $1 = 404;
 
     include fastcgi_params;
-
     fastcgi_param SCRIPT_FILENAME $document_root$1;
     fastcgi_param PATH_INFO $2;
-    #fastcgi_param HTTPS on;
-
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
+    fastcgi_param HTTPS on;
     fastcgi_pass unix:/var/run/php5-fpm.sock;
   }
 
@@ -65,5 +55,7 @@ server {
     # Optional: Don't log access to assets
     access_log off;
   }
+
+
 
 }
