Symlink; make sure proxy added after update

--- a/cached-base/debian/Dockerfile
+++ b/cached-base/debian/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:latest
 
-RUN echo 'Acquire::http::Proxy "http://172.17.42.1:3142";' | tee /etc/apt/apt.conf.d/02proxy \
-  && apt-get update \
+RUN apt-get update \
   && apt-get -y upgrade \
   && apt-get -y autoclean \
   && apt-get -y autoremove \
-  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+  && echo 'Acquire::http::Proxy "http://172.17.42.1:3142";' | tee /etc/apt/apt.conf.d/02proxy
