--- a/base/debian/Dockerfile
+++ b/base/debian/Dockerfile
@@ -5,3 +5,5 @@ RUN apt-get update \
   && apt-get -y autoclean \
   && apt-get -y autoremove \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+COPY ./bin/gosu /usr/local/bin/gosu
