--- a/cached-base/ubuntu/Dockerfile
+++ b/cached-base/ubuntu/Dockerfile
@@ -6,3 +6,5 @@ RUN apt-get update \
   && apt-get -y autoremove \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
   && echo 'Acquire::http::Proxy "http://172.17.42.1:3142";' | tee /etc/apt/apt.conf.d/02proxy
+
+COPY ./bin/gosu /usr/local/bin/gosu
