Ability to set other limits

--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -11,6 +11,9 @@ RUN apt-get update \
   && apt-get -y autoclean \
   && rm -rf /var/lib/apt/lists/* /var/tmp/* /tmp/*
 
+ENV SOURCE_LIMIT 5
+ENV CLIENT_LIMIT 100
+
 COPY ./bin/run.sh /usr/local/bin/
 COPY ./icecast.xml /etc/icecast2/
 
