Moving this over to Alpine Linux!

--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -1,20 +1,10 @@
-#FROM voxxit/cached-base:debian
-FROM voxxit/base:debian
+FROM alpinelinux/base:latest
 
 MAINTAINER j@srv.im
 
 EXPOSE 8000
 
-RUN apt-get update \
-  && DEBIAN_FRONTEND=noninteractive apt-get -y install icecast2 pwgen \
-  && apt-get -y autoremove \
-  && apt-get -y autoclean \
-  && rm -rf /var/lib/apt/lists/* /var/tmp/* /tmp/*
+RUN apk update \
+  && apk add lame icecast
 
-ENV SOURCE_LIMIT 5
-ENV CLIENT_LIMIT 100
-
-COPY ./bin/run.sh /usr/local/bin/
-COPY ./icecast.xml /etc/icecast2/
-
-CMD [ "/usr/local/bin/run.sh" ]
+CMD [ "icecast", "-c", "/etc/icecast.xml" ]
