--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -1,10 +1,15 @@
 FROM alpinelinux/base:latest
 
-MAINTAINER j@srv.im
+MAINTAINER Joshua Delsman <j@srv.im>
+
+ENV ALPINE_MIRROR http://repos.lax-noc.com/alpine/latest-stable/main
+
+RUN echo "$ALPINE_MIRROR" > /etc/apk/repositories \
+  && apk update \
+  && apk upgrade \
+  && apk add lame icecast \
+  && rm -rf /var/cache/apk/*
 
 EXPOSE 8000
-
-RUN apk update \
-  && apk add lame icecast
 
 CMD [ "icecast", "-c", "/etc/icecast.xml" ]
