Add CA certificates and coreutils to base image

--- a/mail/base/Dockerfile
+++ b/mail/base/Dockerfile
@@ -3,6 +3,7 @@ FROM alpinelinux/base:latest
 RUN  echo "http://repos.lax-noc.com/alpine/edge/main" | tee /etc/apk/repositories \
   && apk update \
   && apk upgrade \
+  && apk add ca-certificates coreutils \
   && rm -rf /var/cache/apk/*
 
 ADD ./domains   /domains
