Use proper syslog tag

--- a/mail/dovecot/rsyslog.conf
+++ b/mail/dovecot/rsyslog.conf
@@ -10,6 +10,6 @@ $ModLoad imklog.so   # kernel logging (formerly provided by rklogd)
 $IncludeConfig /etc/rsyslog.d/*
 
 # Send all logs to Loggly
-$template LogglyFormat, "<%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [LOGGLY_TOKEN@LOGGLY_UID tag=\"dovecot\"] %msg%\n"
+$template LogglyFormat, "<%pri%>%protocol-version% %timestamp:::date-rfc3339% %HOSTNAME% %app-name% %procid% %msgid% [LOGGLY_TOKEN@LOGGLY_UID tag=\"mail\"] %msg%\n"
 
 *.* @@logs-01.loggly.com:514;LogglyFormat
