--- a/mail/dovecot/supervisord.conf
+++ b/mail/dovecot/supervisord.conf
@@ -13,6 +13,11 @@ command = /usr/sbin/postfix -c /etc/postfix start
 startsecs = 0
 autorestart = false
 
+[program:postgrey]
+directory = /var/spool/postfix/postgrey
+command = /usr/sbin/postgrey --unix=/var/spool/postfix/postgrey/socket --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
+startsecs = 0
+
 [program:dovecot]
 directory = /etc/dovecot
 command = /usr/sbin/dovecot
