--- a/mail/dovecot/supervisord.conf
+++ b/mail/dovecot/supervisord.conf
@@ -15,7 +15,7 @@ autorestart = false
 
 [program:postgrey]
 directory = /var/spool/postfix/postgrey
-command = /usr/sbin/postgrey --unix=/var/spool/postfix/postgrey/socket --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
+command = /usr/sbin/postgrey --inet=127.0.0.1:10029 --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
 startsecs = 0
 
 [program:dovecot]
