Allow some necessary config through env for tutum

--- a/gogs/Dockerfile
+++ b/gogs/Dockerfile
@@ -3,25 +3,24 @@ FROM alpinelinux/base:latest
 ENV GOPATH   /go
 ENV GOGSPATH /go/src/github.com/gogits/gogs
 ENV PATH     /go/bin:$PATH
+
+# config values
 ENV SSH_PORT 22022
+ENV CACHE_ADAPTER memory
 
 RUN  echo "http://repos.lax-noc.com/alpine/edge/main" | tee /etc/apk/repositories \
   && apk update \
   && apk upgrade \
   && apk add go git openssh \
-  && ssh-keygen -q -N '' -b 4096 -t rsa -f /etc/ssh/ssh_host_rsa_key \
-  && ssh-keygen -q -N '' -b 1024 -t dsa -f /etc/ssh/ssh_host_dsa_key \
-  && ssh-keygen -q -N '' -b 521 -t ecdsa -f /etc/ssh/ssh_host_ecdsa_key \
-  && ssh-keygen -q -N '' -b 256 -t ed25519 -f /etc/ssh/ssh_host_ed25519_key \
   && curl -o /usr/local/bin/gosu -sSL "https://github.com/tianon/gosu/releases/download/1.2/gosu-amd64" \
   && chmod +x /usr/local/bin/gosu \
   && mkdir -p /go/src /go/bin \
-  && go get -u -tags "cert" github.com/gogits/gogs \
-  && cd /go/src/github.com/gogits/gogs \
-  && go build -tags "cert" \
-  && adduser -h /repos -g "gogs user" -s /bin/bash -D gogs \
-  && sed -i 's/nodaemon=false/nodaemon=true/g' /go/src/github.com/gogits/gogs/etc/supervisord.conf \
-  && chown -R gogs:gogs /go/src/github.com/gogits/gogs \
+  && go get -u -tags "cert redis" github.com/gogits/gogs \
+  && cd $GOGSPATH \
+  && mkdir -p $GOGSPATH/repos \
+  && go build -tags "cert redis" \
+  && adduser -h $GOGSPATH -s /bin/bash -D -H gogs \
+  && sed -i 's/nodaemon=false/nodaemon=true/g' $GOGSPATH/etc/supervisord.conf \
   && apk del go \
   && rm -rf /var/cache/apk/*
 
@@ -30,7 +29,7 @@ WORKDIR /go/src/github.com/gogits/gogs
 COPY ./app.ini /go/src/github.com/gogits/gogs/conf/app.ini
 COPY ./run.sh  /go/src/github.com/gogits/gogs/scripts/run.sh
 
-VOLUME [ "/go/src/github.com/gogits/gogs", "/repos" ]
+VOLUME [ "/go/src/github.com/gogits/gogs", "/var/lib/repos" ]
 
 EXPOSE 3000 22022
 
