--- a/gogs/app.ini
+++ b/gogs/app.ini
@@ -6,16 +6,16 @@ RUN_USER = gogs
 RUN_MODE = prod
 
 [repository]
-ROOT = /repos
+ROOT = /var/lib/repos
 SCRIPT_TYPE = bash
 
 [server]
-PROTOCOL = http
-DOMAIN = git.srv.im
+PROTOCOL = https
+DOMAIN = %%HOSTNAME%%
 ROOT_URL = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
 HTTP_ADDR = 0.0.0.0
 HTTP_PORT = 3000
-SSH_PORT = 22022
+SSH_PORT = %%SSH_PORT%%
 ; Disable CDN even in "prod" mode
 OFFLINE_MODE = false
 DISABLE_ROUTER_LOG = false
@@ -35,17 +35,17 @@ STATIC_ROOT_PATH =
 ; Application level GZIP support
 ENABLE_GZIP = true
 ; Landing page for non-logged users, can be "home" or "explore"
-LANDING_PAGE = home
+LANDING_PAGE = explore
 
 [database]
 ; Either "mysql", "postgres" or "sqlite3", it's your choice
-DB_TYPE = mysql
-HOST = 127.0.0.1:3306
-NAME = gogs
-USER = root
+DB_TYPE = postgres
+HOST =
+NAME =
+USER =
 PASSWD =
 ; For "postgres" only, either "disable", "require" or "verify-full"
-SSL_MODE = disable
+SSL_MODE = require
 ; For "sqlite3" only
 PATH = data/gogs.db
 
@@ -54,7 +54,7 @@ PATH = data/gogs.db
 [security]
 INSTALL_LOCK = false
 ; !!CHANGE THIS TO KEEP YOUR USER DATA SAFE!!
-SECRET_KEY = !#@FDEWREWR&*(
+SECRET_KEY = %%SECRET_KEY%%
 ; Auto-login remember days
 LOGIN_REMEMBER_DAYS = 7
 COOKIE_USERNAME = gogs_awesome
@@ -66,7 +66,7 @@ REVERSE_PROXY_AUTHENTICATION_USER = X-WEBAUTH-USER
 ACTIVE_CODE_LIVE_MINUTES = 180
 RESET_PASSWD_CODE_LIVE_MINUTES = 180
 ; User need to confirm e-mail for registration
-REGISTER_EMAIL_CONFIRM = false
+REGISTER_EMAIL_CONFIRM = true
 ; Does not allow register and admin create account only
 DISABLE_REGISTRATION = false
 ; User must sign in to view anything.
@@ -74,7 +74,7 @@ REQUIRE_SIGNIN_VIEW = false
 ; Cache avatar as picture
 ENABLE_CACHE_AVATAR = false
 ; Mail notification
-ENABLE_NOTIFY_MAIL = false
+ENABLE_NOTIFY_MAIL = true
 ; More detail: https://github.com/gogits/gogs/issues/165
 ENABLE_REVERSE_PROXY_AUTHENTICATION = false
 
@@ -85,7 +85,7 @@ TASK_INTERVAL = 1
 DELIVER_TIMEOUT = 5
 
 [mailer]
-ENABLED = false
+ENABLED = %%SMTP%%
 ; Buffer length of channel, keep it as it is if you don't know what it is.
 SEND_BUFFER_LEN = 10
 ; Name displayed in mail title
@@ -93,20 +93,20 @@ SUBJECT = %(APP_NAME)s
 ; Mail server
 ; Gmail: smtp.gmail.com:587
 ; QQ: smtp.qq.com:25
-HOST =
+HOST = %%SMTP_HOST%%
 ; Mail from address
-FROM =
+FROM = %%SMTP_FROM_ADDR%%
 ; Mailer user name and password
-USER =
-PASSWD =
+USER = %%SMTP_USERNAME%%
+PASSWD = %%SMTP_PASSWORD%%
 
 [oauth]
-ENABLED = false
+ENABLED = %%ENABLE_OAUTH%%
 
 [oauth.github]
-ENABLED = false
-CLIENT_ID =
-CLIENT_SECRET =
+ENABLED = %%GITHUB_OAUTH%%
+CLIENT_ID = %%GITHUB_CLIENT_ID%%
+CLIENT_SECRET = %%GITHUB_CLIENT_SECRET%%
 SCOPES = https://api.github.com/user
 AUTH_URL = https://github.com/login/oauth/authorize
 TOKEN_URL = https://github.com/login/oauth/access_token
@@ -140,25 +140,25 @@ TOKEN_URL = https://api.weibo.com/oauth2/access_token
 
 [cache]
 ; Either "memory", "redis", or "memcache", default is "memory"
-ADAPTER = memory
+ADAPTER = %%CACHE_ADAPTER%%
 ; For "memory" only, GC interval in seconds, default is 60
 INTERVAL = 60
 ; For "redis" and "memcache", connection host address
 ; redis: `:6379`
 ; memcache: `127.0.0.1:11211`
-HOST =
+HOST = %%CACHE_HOST%%
 
 [session]
 ; Either "memory", "file", "redis" or "mysql", default is "memory"
-PROVIDER = memory
+PROVIDER = %%SESSION_PROVIDER%%
 ; Provider config options
 ; memory: not have any config yet
 ; file: session file path, e.g. `data/sessions`
 ; redis: config like redis server addr, poolSize, password, e.g. `127.0.0.1:6379,100,gogs`
 ; mysql: go-sql-driver/mysql dsn config string, e.g. `root:password@/session_table`
-PROVIDER_CONFIG = data/sessions
+PROVIDER_CONFIG = %%SESSION_CONFIG%%
 ; Session cookie name
-COOKIE_NAME = i_like_gogits
+COOKIE_NAME = gogs
 ; If you use session in https only, default is false
 COOKIE_SECURE = false
 ; Enable set cookie, default is true
@@ -195,10 +195,10 @@ MAX_FILES = 10
 FORMAT =
 
 [log]
-ROOT_PATH = /go/src/github.com/gogits/gogs/log
+ROOT_PATH =
 ; Either "console", "file", "conn", "smtp" or "database", default is "console"
 ; Use comma to separate multiple modes, e.g. "console, file"
-MODE = console
+MODE = %%LOG_MODE%%
 ; Buffer length of channel, keep it as it is if you don't know what it is.
 BUFFER_LEN = 10000
 ; Either "Trace", "Debug", "Info", "Warn", "Error", "Critical", default is "Trace"
@@ -232,20 +232,20 @@ RECONNECT = false
 ; Either "tcp", "unix" or "udp", default is "tcp"
 PROTOCOL = tcp
 ; Host address
-ADDR =
+ADDR = %%LOG_HOST%%
 
 ; For "smtp" mode only
 [log.smtp]
 LEVEL =
 ; Name displayed in mail title, default is "Diagnostic message from serve"
-SUBJECT = Diagnostic message from serve
+SUBJECT = Diagnostic message from Gogs
 ; Mail server
-HOST =
+HOST = %%SMTP_HOST%%
 ; Mailer user name and password
-USER =
-PASSWD =
+USER = %%SMTP_USERNAME%%
+PASSWD = %%SMTP_PASSWORD%%
 ; Receivers, can be one or more, e.g. ["1@example.com","2@example.com"]
-RECEIVERS =
+RECEIVERS = %%SMTP_TO_ADDR%%
 
 ; For "database" mode only
 [log.database]
