--- a/gogs/app.ini
+++ b/gogs/app.ini
@@ -1,7 +1,7 @@
 ; App name that shows on every page title
 APP_NAME = Gogs: Go Git Service
 ; Change it if you run locally
-RUN_USER = gogs
+RUN_USER = git
 ; Either "dev", "prod" or "test", default is "dev"
 RUN_MODE = prod
 
@@ -12,7 +12,7 @@ SCRIPT_TYPE = bash
 [server]
 PROTOCOL = https
 DOMAIN = %%HOSTNAME%%
-ROOT_URL = %(PROTOCOL)s://%(DOMAIN)s:%(HTTP_PORT)s/
+ROOT_URL = %%ROOT_URL%%
 HTTP_ADDR = 0.0.0.0
 HTTP_PORT = 3000
 SSH_PORT = %%SSH_PORT%%
