--- a/mail/dovecot/supervisord.conf
+++ b/mail/dovecot/supervisord.conf
@@ -12,6 +12,7 @@ directory = /etc/postfix
 command = /usr/sbin/postfix -c /etc/postfix start
 startsecs = 0
 autorestart = false
+user = postfix
 
 [program:postgrey]
 directory = /var/spool/postfix/postgrey
