--- a/rsyslog/Dockerfile
+++ b/rsyslog/Dockerfile
@@ -6,7 +6,12 @@ RUN  apk update \
   && apk add rsyslog \
   && rm -rf /var/cache/apk/*
 
-EXPOSE 514/tcp 514/udp
+EXPOSE 514 514/udp
 
-ENTRYPOINT [ "rsyslogd" ] 
-CMD [ "-n" ]
+VOLUME [ "/var/log", "/etc/rsyslog.d" ]
+
+# for some reason, the apk comes built with a v5
+# config file. using this one for v8:
+COPY ./etc/rsyslog.conf /etc/rsyslog.conf
+
+ENTRYPOINT [ "rsyslogd", "-n" ]
