--- a/swarm/Dockerfile
+++ b/swarm/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 
-MAINTAINER j@srv.im
+MAINTAINER Joshua Delsman <j (at) srv.im>
 
 ADD swarm_linux_amd64 /bin/swarm
 ADD ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
