Using base on r.srv.im

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,12 +1,12 @@
-.PHONY: dovecot base deploy
+.PHONY: dovecot base push
 
 base:
-	docker build \
-		--tag voxxit/mail-base ./base/
+	docker build --tag r.srv.im/mail-base ./base
 
 dovecot: base
-	docker build \
-		--tag voxxit/mail-dovecot ./dovecot/
+	docker build --tag r.srv.im/mail-base ./base
+	docker build --tag r.srv.im/dovecot ./dovecot
 
-run: dovecot
-	docker run -d --restart always -v /root/data/mail:/srv/vmail --dns 8.8.4.4 --dns 8.8.8.8 -p 465:465 -p 587:587 -p 993:993 -h mail.srv.im --name mail.srv.im voxxit/mail-dovecot
+push:
+	docker push r.srv.im/mail-base
+	docker push r.srv.im/dovecot
