syslog no longer necessary in container

--- a/mail/dovecot/etc/supervisord.conf
+++ b/mail/dovecot/etc/supervisord.conf
@@ -1,11 +1,6 @@
 [supervisord]
 nodaemon=true
 
-[program:rsyslog]
-command = rsyslogd -n
-startsecs = 5
-stopwaitsecs = 5
-
 [program:postfix]
 process_name = master
 directory = /etc/postfix
@@ -16,7 +11,7 @@ user = postfix
 
 [program:postgrey]
 directory = /var/spool/postfix/postgrey
-command = /usr/sbin/postgrey --inet=127.0.0.1:10029 --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
+command = /usr/sbin/postgrey --delay 20 --inet=127.0.0.1:10029 --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
 startsecs = 0
 
 [program:dovecot]
