--- a/mail/dovecot/Dockerfile
+++ b/mail/dovecot/Dockerfile
@@ -2,7 +2,7 @@ FROM r.srv.im/mail-base:latest
 
 RUN  apk update \
   && apk add \
-    postfix postgrey dovecot rsyslog supervisor cyrus-sasl cyrus-sasl-digestmd5 coreutils \
+    postfix postgrey dovecot supervisor cyrus-sasl cyrus-sasl-digestmd5 coreutils \
   && rm -rf /var/cache/apk/* \
   && cp /aliases /etc/postfix/virtual \
   && cp /domains /etc/postfix/virtual-mailbox-domains \
