--- a/mail/dovecot/etc/dovecot/conf.d/10-auth.conf
+++ b/mail/dovecot/etc/dovecot/conf.d/10-auth.conf
@@ -1,11 +1,11 @@
 auth_mechanisms = plain login
 
 passdb {
-  driver = passwd-file
-  args = /etc/dovecot/passwd
+  driver = sql
+  args = /etc/dovecot/dovecot-sql.conf
 }
 
 userdb {
-  driver = static
-  args = uid=vmail gid=vmail home=/srv/mail/%d/%n
+  driver = sql
+  args = /etc/dovecot/dovecot-sql.conf
 }
