--- a/mail/dovecot/etc/supervisord.conf
+++ b/mail/dovecot/etc/supervisord.conf
@@ -8,9 +8,8 @@ command = /usr/sbin/postfix -c /etc/postfix start
 startsecs = 0
 autorestart = false
 
-[program:postgrey]
-directory = /var/spool/postfix/postgrey
-command = /usr/sbin/postgrey --delay 20 --inet=127.0.0.1:10029 --dbdir=/var/spool/postfix/postgrey --user=postgrey --group=postgrey
+[program:gross]
+command = /usr/sbin/grossd -u gross -d -f /etc/grossd.conf
 startsecs = 0
 
 [program:dovecot]
