--- a/mail/Makefile
+++ b/mail/Makefile
@@ -6,8 +6,12 @@ dovecot:
 spamassassin:
 	docker build --tag r.srv.im/spamassassin ./spamd
 
-all: dovecot spamassassin
+mailpile:
+	docker build --tag voxxit/mailpile ./mailpile
+
+all: dovecot spamassassin mailpile
 
 push: all
 	docker push r.srv.im/dovecot
 	docker push r.srv.im/spamassassin
+	docker push voxxit/mailpile
