--- a/wercker.yml
+++ b/wercker.yml
@@ -5,3 +5,11 @@ build:
         name: docker version
         code: |
           docker -v
+
+  after-steps:
+    - sherzberg/slack-notify:
+        subdomain: voxxit
+        token: $SLACK_TOKEN
+        channel: "ops"
+        username: wercker
+        icon_url: https://avatars3.githubusercontent.com/u/1695193?s=140
