--- a/wercker.yml
+++ b/wercker.yml
@@ -6,7 +6,7 @@ build:
         code: |
           docker -v
   after-steps:
-    - wantedly/pretty-slack-notify:
-        webhook_url: $SLACK_WEBHOOK_URL
-        channel: ops
-        username: wercker
+    - script:
+        name: slack notification
+        code: |
+          curl -X POST --data-urlencode 'payload={"channel": "#ops", "username": "wercker", "text": "$WERCKER_APPLICATION_OWNER_NAME/$WERCKER_APPLICATION_NAME build by $WERCKER_STARTED_BY finished!", "icon_url": "https://avatars3.githubusercontent.com/u/1695193?s=140"}' https://hooks.slack.com/services/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
