Combining mat stuff together

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,16 +1,7 @@
-.PHONY: dovecot spamassassin push
+.PHONY: mta push
 
-dovecot:
-	docker build --tag r.srv.im/dovecot ./dovecot
+mta:
+	docker build --tag r.srv.im/mta ./mta
 
-spamassassin:
-	docker build --tag r.srv.im/spamassassin ./spamd
-
-mailpile:
-	docker build --tag voxxit/mailpile ./mailpile
-
-all: dovecot spamassassin mailpile
-
-push: all
-	docker push r.srv.im/dovecot
-	docker push r.srv.im/spamassassin
+push:
+	docker push r.srv.im/mtay
