Fix scripts for MTA

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,7 +1,7 @@
 .PHONY: mta push
 
 mta:
-	docker build --tag r.srv.im/mta ./mta
+	docker build --no-cache --tag r.srv.im/mta ./mta
 
 push:
-	docker push r.srv.im/mtay
+	docker push r.srv.im/mta
