--- a/mail/mta/etc/supervisord.conf
+++ b/mail/mta/etc/supervisord.conf
@@ -16,3 +16,8 @@ startsecs = 0
 directory = /etc/dovecot
 command = /usr/sbin/dovecot
 startsecs = 0
+
+[program:spamd]
+directory = /var/spool/postfix
+command = /usr/bin/spamd
+startsecs = 0
