--- a/mail/mta/Dockerfile
+++ b/mail/mta/Dockerfile
@@ -29,6 +29,13 @@ COPY ./etc/ /etc/
 COPY ./bin/run.sh /usr/local/bin/
 COPY ./bin/update_spamassassin_rules.sh /usr/local/bin/
 COPY ./bin/spam_filter.sh /usr/local/bin/
+COPY ./dns.patch /
+COPY ./tests.bats /
+
+# Patch for SpamAssassin's DNS Resolving to fix the
+# issues with Net::DNS 0.76
+RUN cd /usr/share/perl5/vendor_perl/Mail/SpamAssassin \
+  && patch -p0 -i /dns.patch
 
 EXPOSE 25 465 587 993
 
