--- a/mail/mta/etc/supervisord.conf
+++ b/mail/mta/etc/supervisord.conf
@@ -13,11 +13,9 @@ command = /usr/sbin/grossd -u gross -d -f /etc/grossd.conf
 startsecs = 0
 
 [program:dovecot]
-directory = /etc/dovecot
 command = /usr/sbin/dovecot
 startsecs = 0
 
 [program:spamd]
-directory = /var/spool/postfix
-command = /usr/bin/spamd
+command = /usr/sbin/spamd
 startsecs = 0
